--- a/themes/authentic-filters/assets/scss/header.scss
+++ b/themes/authentic-filters/assets/scss/header.scss
@@ -96,7 +96,7 @@ header {
             width: 20px;
             height: 2px;
             background-color: #3a3a3c;
-            margin: 5px;
+            margin: 4px 0;
             transition: all 0.3s ease;
             pointer-events: none;
         }
